--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ base64 = "0.7.0"
 bytes = "0.4.5"
 error-chain = "0.11.0"
 futures = "0.1.16"
-hyper = "0.11.2"
-hyper-tls = "0.1.2"
+reqwest = { version = "0.8.0", features = ["unstable"] }
 ring = "0.11.0"
 serde = "1.0.15"
 serde_derive = "1.0.15"
